<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dobrowins.anon.panicpanic.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <!--android:id="@+id/mainActivityContainer"-->

        <TextView
            android:id="@+id/yourCoord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/yourCoord"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/coordinatesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/coordUnknown"
            android:visibility="invisible"
            android:paddingBottom="30dp"
            />

        <Button
            android:id="@+id/panicButton"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/round_button"
            android:text="@string/panicButtonUnclicked"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:clickable="true"
            android:layout_gravity="center"
            android:elevation="2dp"
            />
    </LinearLayout>


</RelativeLayout>
