<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dobrowins.anon.panicpanic.WelcomeActivity">

    <TextView
        android:id="@+id/phoneNumberTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcomeText"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/phoneNumberEdittext"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/phoneNumberTextview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/phoneNumberInsertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeBtnTxt"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignTop="@+id/phoneNumberEdittext"
        android:layout_alignRight="@+id/phoneNumberTextview"
        android:layout_alignEnd="@+id/phoneNumberTextview"
        android:onClick="SaveData"/>

    <TextView
        android:id="@+id/changeNoteTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/changeNumberNote"
        android:layout_below="@+id/phoneNumberEdittext"
        android:layout_marginTop="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/pleaseTestTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="24sp"
        android:text="@string/pleaseTest"
        android:layout_below="@+id/changeNoteTextview"
        android:layout_marginTop="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/instructionsButton"
        android:text="Прочитать инструкцию"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/pleaseTestTextview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:textColor="@color/white"
        android:onClick="ShowInstructions"/>

</RelativeLayout>
